[project]
name = "comfyui-image-of-the-day"
description = "Fetch a fresh image straight into your workflow from 8 daily/random sources. Useful for prompt testing, style references, daily-image automations, or just kicking off a workflow with something interesting."
version = "1.0.1"
license = "MIT"
authors = [
    { name = "Peter Neill" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/shootthesound/comfyui-image-of-the-day"
Repository = "https://github.com/shootthesound/comfyui-image-of-the-day"
Issues = "https://github.com/shootthesound/comfyui-image-of-the-day/issues"

[tool.comfy]
PublisherId = "shootthesound"
DisplayName = "Image of the Day"
Icon = ""
